# qt_json_viewer

./: CMakeLists.txt  README.md  filereader.cpp  filereader.h  main.cpp
